<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2011,2012 The Serval Project
 * 
 * This file is part of Serval Software (http://www.servalproject.org)
 * 
 * Serval Software is free software; you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation; either version 3 of the License, or
 * (at your option) any later version.
 * 
 * This source code is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU
  General Public License
 * along with this source code; if not, write to the Free Software
 * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 --><!-- @author Romana Challans <romana@servalproject.org> -->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- Serval General -->
    <string name="header">Serval Project</string>
    <string name="logoid">Serval Project Logo</string>
    <string name="url">servalproject.org</string>
    <string name="warning1">EXPERIMENTAL</string>
    <string name="warning2">SOFTWARE</string>
    <string name="app_name">Secret Chat</string>
    <string name="agree">I agree</string>
    <string name="cancel">Cancel</string>

    <!-- Serval Main -->
    <!-- These must say Serval Mesh, not Serval Network, because Serval provides the protocol, not the infrastructure.
	This has important implications for telecommunications law in various countries. -->
    <string name="callLabel">Call</string>
    <string name="messageLabel">Messages</string>
    <string name="contactsLabel">Contacts</string>
    <string name="mapsLabel">Maps</string>
    <string name="sharingLabel">Share Files</string>
    <string name="servalLabel">Share Us</string>
    <string name="settingsLabel">Settings</string>
    <string name="powerLabel">Power</string>
    <string name="helpLabel">Help</string>
    <string name="connectLabel">Connect</string>
    <string name="groupLabel">Group </string>

    <string name="state_installing">Installing&#8230;</string>
    <string name="state_upgrading">Upgrading&#8230;</string>
    <string name="state_starting">Starting&#8230;</string>
    <string name="state_installed">Installed</string>
    <string name="state_broken">Broken!</string>


    <!-- Serval Buttons -->
    <string name="btnwizard">SETUP WIZARD</string>
    <string name="btnPhOk">OK</string>

    <!-- Serval Phone Set -->
    <string name="cancelcall">Cancel</string>
    <string name="searchpeers">Search</string>
    <string name="searchingpeers">Searching...</string>
    <string name="callcellular">Call via cellular network</string>

    <!-- Serval General -->
    <string name="setphone">Enter Phone No.</string>
    <string name="setname">Display Name.</string>
    <string name="statusstar">Status Indicator</string>

    <!-- Serval About -->
    <string name="aboutTitle">About</string>
    <string name="emailEnquiries">enquiry@servalproject.org</string>

    <!-- Serval Donations -->
    <string name="donateTitle">Make a Donation</string>
    <string name="donateButton">Donate via PayPal</string>

    <!-- Serval Instruction -->
    <string name="setdetails">Set Name and Number</string>
    <string name="phoneInstr">Please enter your phone number.\nIt cannot match an emergency number, \nand must be at least 5 digits long.</string>

    <!-- Serval Security -->
    <string name="security_header">Serval Security</string>

    <!-- Serval Maps -->
    <string name="mapInfo">You do not currently have Serval Maps installed.
	    \n\nServal Maps is currently under development and it will be coming to the 
	    Android Marketplace soon. 
	    \n\nFor more information please visit the Serval Maps web site 
	    \nhttp://developer.servalproject.org/wiki
	    \nIn the meantime, if you have any queries, 
	    \nplease contact us at \n\n</string>

    <string name="broadcast_meshms_message">Broadcast messages are sent to the whole network.</string>


    <!--  Wifi setup / warnings -->
    <string name="openhotspottitle">Portable Wi-Fi hotspot</string>
    <string name="openhotspotmessage">Starting an open hotspot will allow other users to consume your cellular data and may cost you money.</string>
    <string name="adhoctesttitle">HERE BE DRAGONS!</string>
    <string name="adhoctestmessage">Connecting to an Ad Hoc Wi-Fi network is not supported by Android. Doing this requires root permission, is unlikely to work and has the potential to damage your device and void your warranty.</string>
    <string name="testbutton">Test</string>
    <string name="adhocconnecttitle">Ad Hoc Wi-Fi</string>
    <string name="adhocconnectmessage">Channel: %2$d\nAddress: %3$s</string>
    <string name="connectbutton">Connect</string>
    <string name="settingsbutton">Settings</string>

    <plurals name="peers_label">
        <item quantity="one">%d Peer</item>
        <item quantity="other">%d Peers</item>
    </plurals>
    <string name="server_off">Off</string>
    <string name="server_starting">Starting</string>
    <string name="server_idle">Idle</string>
    <string name="server_nopeers">No Peers</string>

    <string name="connecting">Connecting...</string>
    <string name="connecting_to">Connecting to %1$s...</string>
    <string name="connected_to">Connected to %1$s.</string>
    <string name="ssid_none">[Hidden network]</string>
    <plurals name="open_networks">
        <item quantity="one">%d open network.</item>
        <item quantity="other">%d open networks.</item>
    </plurals>
    <plurals name="known_networks">
        <item quantity="one">%d known network.</item>
        <item quantity="other">%d known networks.</item>
    </plurals>
    <plurals name="serval_networks">
        <item quantity="one">%d Serval network.</item>
        <item quantity="other">%d Serval networks.</item>
    </plurals>

    <string name="wifi_client">Wi-Fi</string>
    <string name="hotspot">Portable Wi-Fi hotspot</string>
    <string name="adhoc">Ad Hoc Mesh</string>
    <string name="bluetooth">Bluetooth</string>

    <string name="bluetooth_not_discoverable">On, but not discoverable</string>

    <string name="network_target">Queued</string>
    <string name="hotspot_restoring">Attempting to restore your hotspot configuration</string>

    <string name="meshms_delivered">delivered</string>
    <string name="meshms_read">read</string>

    <!-- group setting -->
    <string name="group_broadcast_button">Broadcast</string>
    <string name="group_create_button">Create</string>
    <string name="group_peer_join_button">Join</string>
    <string name="button_leave_group">Leave Request</string>
    <string name="group_list_header">My groups</string>
    <string name="group_peer_header">Peers</string>
    <string name="group_member_header">Group Members</string>
    <string name="group_chat_header">Group Chat</string>
    <string name="show_group_member">Group Member List</string>
    <string name="setup_secure_group">Initialize Group</string>
    <string name="re_create_group">Re-Create Group</string>
    <string name="update_sub_key">Update Sub-key</string>
    <string name="sub_key_request">Sub-Key Request</string>
    <string name="group_delete">Delete</string>
    <string name="group_member_delete">Delete</string>
    <string name="group_request_button">Request Messages</string>
    <string name="button_agree">Agree</string>
    <string name="button_deny">Deny</string>
    <string name="button_ok">OK</string>
    <string name="button_setup_threshold">Setup Threshold</string>
    <string name="text_view_threshold">Secret Sharing Threshold</string>
    <string name="radio_button_mode_fix">Fix</string>
    <string name="radio_button_mode_percentage">Percentage</string>
    <string name="text_view_threshold_mode">Mode</string>
    <string name="text_view_threshold_value">Value</string>
    <string name="group_set_sid">Press OK to generate an unique ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
