<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    <TextView
        android:id="@+id/text_view_current_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        />
    <TextView
        android:id="@+id/text_view_current_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/text_view_current_mode"
        />
    <TextView
        android:id="@+id/text_view_current"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/text_view_current_value"
        />
    <TextView
        android:id="@+id/text_view_threshold_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_view_threshold_mode"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/text_view_current"
        android:layout_marginBottom="5dp"
        />

    <RadioGroup
        android:id="@+id/radio_group_mode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_threshold_mode"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/radio_button_mode_fix"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/radio_button_mode_fix" />
        <RadioButton
            android:id="@+id/radio_button_mode_percentage"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/radio_button_mode_percentage" />
    </RadioGroup>
    <TextView
        android:id="@+id/text_view_threshold_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/text_view_threshold_value"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/radio_group_mode"
        />
    <TextView
        android:id="@+id/text_view_setting_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/text_view_threshold_value"
        />
    <LinearLayout
        android:id="@+id/linear_layout_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:layout_below="@id/text_view_setting_value"
        android:orientation="vertical">
    </LinearLayout>
    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_layout_value"
        android:text="@string/button_ok"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>
