<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/group_chat_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="1dp"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <TextView
        android:id="@+id/text_view_master_key_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="1dp"
        android:layout_below="@id/group_chat_title"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_view_sub_key_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="1dp"
        android:layout_below="@id/text_view_master_key_version"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_view_group_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="1dp"
        android:layout_below="@id/text_view_sub_key_version"
        android:textSize="20sp"
        />
    <TextView
        android:id="@+id/text_view_current_threshold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="1dp"
        android:layout_below="@id/text_view_group_size"
        android:textSize="20sp"
        />
    <LinearLayout
        android:id="@+id/linear_layout_buttons"
        android:layout_below="@id/text_view_current_threshold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_setup_secure_group"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/setup_secure_group" />
        <Button
            android:id="@+id/button_update_sub_key"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/update_sub_key" />
        <Button
            android:id="@+id/button_setup_threshold"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/button_setup_threshold" />
        <Button
            android:id="@+id/button_leave_group"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/button_leave_group"/>
        <Button
            android:id="@+id/button_re_create_group"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/re_create_group"/>
        <Button
            android:id="@+id/button_show_group_member"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:text="@string/show_group_member" />
    </LinearLayout>


    <EditText
        android:id="@+id/edit_text_group_message_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/button_send_group_message"
        android:layout_marginRight="1dp"
        android:hint="@string/show_conversation_hint_message"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxLines="3" />

    <Button
        android:id="@+id/button_send_group_message"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/edit_text_group_message_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:text="@string/new_message_ui_btn_send_message"
        android:textSize="13sp" />

    <ListView
        android:id="@+id/list_view_group_chat"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/edit_text_group_message_content"
        android:layout_below="@id/linear_layout_buttons"
        android:divider="@color/black"
        android:dividerHeight="0px" />

</RelativeLayout>
